--- a/app/src/main/res/layout/activity_event_details.xml
+++ b/app/src/main/res/layout/activity_event_details.xml
@@ -109,8 +109,8 @@
                             android:orientation="horizontal">
 
                             <ImageView
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
                                 android:layout_margin="4dp"
                                 android:src="@drawable/clock" />
 
@@ -125,7 +125,7 @@
                                 android:text="Event Time"
                                 android:textColor="@android:color/white"
                                 android:textAppearance="@style/AppTheme"
-                                android:textSize="15sp" />
+                                android:textSize="30sp" />
                         </LinearLayout>
 
 
