--- a/app/src/main/res/layout/activity_save__ticket.xml
+++ b/app/src/main/res/layout/activity_save__ticket.xml
@@ -38,6 +38,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="311dp"
+                android:scaleType="fitXY"
                 android:src="@drawable/atturaif_"/>
 
             <com.kofigyan.stateprogressbar.StateProgressBar
