--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -6,8 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    tools:context=".Payment"
-    >
+    tools:context=".Payment">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
@@ -23,7 +22,6 @@
         app:titleTextColor="@color/white" />
 
 
-
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -36,35 +34,34 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="311dp"
-                android:src="@drawable/atturaif_"/>
-
+                android:scaleType="fitXY"
+                android:src="@drawable/atturaif_" />
 
 
             <com.kofigyan.stateprogressbar.StateProgressBar
                 android:id="@+id/your_state_progress_bar_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                app:spb_animateToCurrentProgressState="true"
+                app:spb_checkStateCompleted="true"
+                app:spb_currentStateDescriptionColor="#084D14"
                 app:spb_currentStateNumber="two"
                 app:spb_maxStateNumber="four"
                 app:spb_stateBackgroundColor="#BDBDBD"
+                app:spb_stateDescriptionColor="#808080"
                 app:spb_stateForegroundColor="#084D14"
                 app:spb_stateNumberBackgroundColor="#808080"
-                app:spb_stateNumberForegroundColor="#eeeeee"
-                app:spb_currentStateDescriptionColor="#084D14"
-                app:spb_stateDescriptionColor="#808080"
-                app:spb_animateToCurrentProgressState="true"
-                app:spb_checkStateCompleted="true"
-                />
-            
+                app:spb_stateNumberForegroundColor="#eeeeee" />
+
             <LinearLayout
 
                 android:id="@+id/enlayout_en"
 
                 android:layout_width="match_parent"
-                android:layout_marginEnd="15dp"
                 android:layout_height="70dp"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="0dp"
+                android:layout_marginEnd="15dp"
                 android:orientation="horizontal">
 
                 <LinearLayout
@@ -72,13 +69,13 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
-                    android:orientation="vertical"                  >
+                    android:orientation="vertical">
 
                     <ImageView
-                        android:layout_marginTop="0dp"
                         android:layout_width="53dp"
                         android:layout_height="32dp"
                         android:layout_marginStart="8dp"
+                        android:layout_marginTop="0dp"
                         android:src="@drawable/calendar_book" />
                 </LinearLayout>
 
@@ -90,10 +87,10 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:layout_marginTop="0dp"
-                        android:layout_marginStart="15dp"
                         android:layout_width="48dp"
                         android:layout_height="49dp"
+                        android:layout_marginStart="15dp"
+                        android:layout_marginTop="0dp"
                         android:src="@drawable/total_tickets" />
 
                 </LinearLayout>
@@ -103,13 +100,13 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
-                    android:orientation="vertical"   >
+                    android:orientation="vertical">
 
                     <ImageView
-                        android:layout_marginTop="0dp"
                         android:layout_width="53dp"
                         android:layout_height="32dp"
                         android:layout_marginStart="29dp"
+                        android:layout_marginTop="0dp"
                         android:src="@drawable/credit_card" />
 
                 </LinearLayout>
@@ -122,10 +119,10 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:layout_marginTop="0dp"
                         android:layout_width="53dp"
                         android:layout_height="32dp"
                         android:layout_gravity="end"
+                        android:layout_marginTop="0dp"
                         android:src="@drawable/download" />
 
                 </LinearLayout>
@@ -134,27 +131,27 @@
             </LinearLayout>
 
             <LinearLayout
-                android:visibility="gone"
-                android:layout_width="match_parent"
-                android:layout_marginEnd="15dp"
                 android:id="@+id/enlayout_ar"
+                android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:layout_marginStart="15dp"
                 android:layout_marginTop="0dp"
-                android:orientation="horizontal">
+                android:layout_marginEnd="15dp"
+                android:orientation="horizontal"
+                android:visibility="gone">
 
                 <LinearLayout
                     android:layout_width="5dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
-                    android:orientation="vertical"                  >
+                    android:orientation="vertical">
 
                     <ImageView
-                        android:layout_marginTop="0dp"
                         android:layout_width="53dp"
                         android:layout_height="32dp"
                         android:layout_marginStart="8dp"
+                        android:layout_marginTop="0dp"
                         android:src="@drawable/download" />
                 </LinearLayout>
 
@@ -166,10 +163,10 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:layout_marginTop="0dp"
                         android:layout_width="53dp"
                         android:layout_height="32dp"
                         android:layout_marginStart="14dp"
+                        android:layout_marginTop="0dp"
                         android:src="@drawable/credit_card" />
 
                 </LinearLayout>
@@ -179,15 +176,14 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="5dp"
                     android:layout_weight="1"
-                    android:orientation="vertical"   >
+                    android:orientation="vertical">
 
                     <ImageView
-                        android:layout_marginTop="0dp"
-                        android:layout_marginStart="26dp"
                         android:layout_width="48dp"
                         android:layout_height="49dp"
-                        android:src="@drawable/total_tickets"
-                         />
+                        android:layout_marginStart="26dp"
+                        android:layout_marginTop="0dp"
+                        android:src="@drawable/total_tickets" />
 
                 </LinearLayout>
 
@@ -199,11 +195,11 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:layout_marginTop="0dp"
                         android:layout_width="53dp"
                         android:layout_height="32dp"
-
                         android:layout_gravity="end"
+
+                        android:layout_marginTop="0dp"
                         android:src="@drawable/calendar_book" />
 
                 </LinearLayout>
@@ -212,32 +208,26 @@
             </LinearLayout>
 
 
-
             <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="10dp"
-            android:orientation="vertical">
-
-            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
-                android:layout_marginTop="20dp"
-                android:text="@string/View_Ticket"
-                android:textColor="@color/black"
-                android:textSize="25sp"
-                android:textStyle="bold"
-                android:gravity="center"/>
+                android:layout_marginEnd="10dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="5dp"
+                    android:layout_marginTop="20dp"
+                    android:gravity="center"
+                    android:text="@string/View_Ticket"
+                    android:textColor="@color/black"
+                    android:textSize="25sp"
+                    android:textStyle="bold" />
 
 
-
-
-
-
-
-        </LinearLayout>
+            </LinearLayout>
 
             <ScrollView
                 android:layout_width="match_parent"
@@ -273,76 +263,67 @@
                                 android:orientation="horizontal">
 
                                 <LinearLayout
-                                    android:layout_width="82dp"
-                                    android:layout_height="104dp"
-                                    android:layout_margin="1dp"
-                                    android:layout_weight="4"
-
+                                    android:layout_width="50dp"
+                                    android:layout_height="match_parent"
+                                    android:layout_marginStart="1dp"
+                                    android:layout_weight="1"
                                     android:orientation="vertical">
 
                                     <TextView
-                                        android:layout_width="69dp"
+                                        android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
-                                        android:layout_marginTop="20dp"
+                                        android:layout_marginStart="1dp"
+                                        android:layout_marginTop="10dp"
                                         android:layout_weight="1"
                                         android:text="@string/date"
                                         android:textColor="@color/dark_gray"
-                                        android:textSize="25sp" />
+                                        android:textSize="30sp" />
 
-                                        android:textAppearance="@style/AppTheme"
-                                        android:textStyle="bold" />
 
                                     <TextView
                                         android:id="@+id/date"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
-                                        android:layout_margin="5dp"
+                                        android:layout_marginTop="5dp"
+                                        android:layout_marginStart="5dp"
                                         android:layout_weight="1"
                                         android:text="dbdfbdfbdfb"
                                         android:textAppearance="@style/AppTheme"
                                         android:textColor="@color/black"
-                                        android:textSize="20sp" />
+                                        android:textSize="26sp" />
 
-
-                                        android:textSize="25sp" />
 
                                 </LinearLayout>
 
                                 <LinearLayout
-                                    android:layout_width="90dp"
-                                    android:layout_height="wrap_content"
-                                    android:layout_margin="5dp"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="79dp"
+                                    android:layout_marginEnd="20dp"
                                     android:layout_weight="1"
                                     android:orientation="vertical">
 
                                     <TextView
-                                        android:layout_width="75dp"
+                                        android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
-                                        android:layout_marginTop="18dp"
+                                        android:layout_marginStart="10dp"
+                                        android:layout_marginTop="15dp"
                                         android:layout_weight="1"
                                         android:text="@string/price"
                                         android:textColor="@color/dark_gray"
-                                        android:textSize="25sp" />
+                                        android:textSize="30sp" />
 
-                                        android:textAppearance="@style/AppTheme"
-                                        android:textStyle="bold"
-
-                                        />
 
                                     <TextView
                                         android:id="@+id/price_total"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
-                                        android:layout_margin="3dp"
+                                        android:layout_marginStart="5dp"
                                         android:layout_weight="1"
-                                        android:layout_marginStart="10dp"
-                                        android:text="dfbdffdghdf"
+                                        android:text="dfbdffddf"
                                         android:textColor="@color/black"
-                                        android:textSize="20sp" />
+                                        android:textSize="26sp" />
 
-                                        android:textAppearance="@style/AppTheme"
 
-                                        android:textSize="25sp" />
                                 </LinearLayout>
 
 
@@ -359,7 +340,6 @@
                     </RelativeLayout>
 
 
-
                     <Button
                         android:id="@+id/button2"
                         android:layout_width="match_parent"
@@ -372,10 +352,10 @@
                         android:text="@string/checkout"
                         android:textColor="@color/white"
                         android:textSize="26sp"
-                        android:textStyle="bold"/>
+                        android:textStyle="bold" />
 
-                        android:textAppearance="@style/AppTheme"
-                        />
+                    android:textAppearance="@style/AppTheme"
+                    />
 
                 </LinearLayout>
             </ScrollView>
