--- a/app/src/main/res/layout/activity_sitting_page.xml
+++ b/app/src/main/res/layout/activity_sitting_page.xml
@@ -33,22 +33,25 @@
             android:layout_width="170dp"
             android:layout_height="match_parent"
             android:text="@string/language"
+            android:gravity="center_vertical"
             android:textAppearance="@style/AppTheme"
             android:textColor="@color/colorPrimary"
 
-            android:textSize="25sp" />
+            android:textSize="38sp" />
 
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:gravity="center_vertical|center_horizontal"
             android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/nextArrow"
                 android:layout_width="30dp"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="0dp"
                 android:layout_height="30dp"
                 android:layout_gravity="end"
                 android:src="@drawable/arrow_next" />
@@ -59,7 +62,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="10dp"
         android:background="@color/gray" />
 
 
