--- a/app/src/main/res/layout/ticket_item.xml
+++ b/app/src/main/res/layout/ticket_item.xml
@@ -33,7 +33,7 @@
 
             <TextView
                 android:id="@+id/visitor_type"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="start"
                 android:layout_marginStart="20dp"
