--- a/app/src/main/res/layout/activity_aboutus__page.xml
+++ b/app/src/main/res/layout/activity_aboutus__page.xml
@@ -51,7 +51,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="25dp"
+                android:layout_marginTop="22dp"
                 android:layout_marginEnd="10dp"
                 android:text="@string/about_us"
                 android:textAppearance="@style/AppTheme"
@@ -62,7 +62,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:textColor="@color/black"
+                android:textSize="29sp"
+                android:textColor="@color/dark_gray"
+
                 android:textAppearance="@style/AppTheme"
                  />
 
@@ -70,7 +72,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="25dp"
+                android:layout_marginTop="22dp"
                 android:layout_marginEnd="10dp"
                 android:text="@string/working_hours"
                 android:textAppearance="@style/AppTheme"
@@ -80,6 +82,7 @@
                 android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textSize="30sp"
                 android:nestedScrollingEnabled="true" />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
