--- a/app/src/main/res/layout/activity_home_page_.xml
+++ b/app/src/main/res/layout/activity_home_page_.xml
@@ -32,7 +32,7 @@
                         android:id="@+id/home_text_view"
                         android:layout_width="310dp"
                         android:layout_height="match_parent"
-                        android:layout_marginStart="35dp"
+                        android:layout_marginStart="20dp"
                         android:layout_weight="1"
                         android:gravity="center|center_horizontal"
                         android:letterSpacing="-0.02"
@@ -55,37 +55,20 @@
 
             </androidx.appcompat.widget.Toolbar>
 
+
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
-                android:layout_weight="1"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
-                android:elevation="2dp"
-                app:cardCornerRadius="5dp">
+                android:layout_height="190dp"
+                android:layout_margin="10dp"
+                app:cardCornerRadius="10dp">
 
-                <com.smarteist.autoimageslider.SliderView
-                    android:id="@+id/imageSlider"
+                <ImageView
+                    android:id="@+id/slider"
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    app:sliderAnimationDuration="600"
-                    android:layout_weight="1"
-                    android:scaleType="fitXY"
-                    app:sliderAutoCycleDirection="left"
-                    app:sliderAutoCycleEnabled="true"
-                    app:sliderCircularHandlerEnabled="true"
-                    app:sliderIndicatorAnimationDuration="3000"
-                    app:sliderIndicatorGravity="center_horizontal|bottom"
-                    app:sliderIndicatorMargin="15dp"
-                    app:sliderIndicatorOrientation="horizontal"
-                    app:sliderIndicatorPadding="3dp"
-                    app:sliderIndicatorRadius="2dp"
-                    app:sliderIndicatorSelectedColor="#5A5A5A"
-                    app:sliderIndicatorUnselectedColor="#FFF"
-                    app:sliderScrollTimeInSec="5"
-                    app:sliderStartAutoCycle="true" />
+                    android:layout_height="match_parent"
+                    android:scaleType="fitXY">
+
+                </ImageView>
 
             </androidx.cardview.widget.CardView>
 
@@ -137,7 +120,6 @@
                                 android:background="@color/colorPrimary" />
 
                             <TextView
-                                android:textStyle="bold"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="5dp"
@@ -145,7 +127,8 @@
                                 android:gravity="center"
                                 android:text="@string/Book"
                                 android:textColor="#BF9054"
-                                android:textSize="26sp" />
+                                android:textSize="26sp"
+                                android:textStyle="bold" />
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
 
@@ -160,7 +143,7 @@
                         app:cardCornerRadius="8dp">
 
                         <LinearLayout
-                            android:id="@+id/event"
+                            android:id="@+id/VR"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:gravity="center"
@@ -170,7 +153,7 @@
                                 android:layout_width="70dp"
                                 android:layout_height="70dp"
                                 android:layout_margin="5dp"
-                                android:src="@drawable/event" />
+                                android:src="@drawable/smartphone" />
 
                             <TextView
                                 android:layout_width="match_parent"
@@ -181,15 +164,15 @@
                                 android:background="@color/colorPrimary" />
 
                             <TextView
-                                android:textStyle="bold"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="5dp"
                                 android:layout_marginBottom="5dp"
                                 android:gravity="center"
-                                android:text="@string/Events"
+                                android:text="@string/take_glance"
                                 android:textColor="#BF9054"
-                                android:textSize="26sp" />
+                                android:textSize="26sp"
+                                android:textStyle="bold" />
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
 
@@ -240,38 +223,61 @@
                                 android:layout_marginTop="5dp"
                                 android:layout_marginBottom="5dp"
                                 android:gravity="center"
-                                android:textStyle="bold"
                                 android:text="@string/Shops"
                                 android:textColor="#BF9054"
-                                android:textSize="26sp" />
+                                android:textSize="26sp"
+                                android:textStyle="bold" />
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
 
-                    <LinearLayout
+                    <androidx.cardview.widget.CardView
 
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_margin="20dp"
                         android:layout_weight="1"
+                        android:elevation="5dp"
                         android:gravity="center"
-                        android:orientation="vertical" />
+                        android:orientation="vertical"
+                        app:cardCornerRadius="8dp">
+
+                        <LinearLayout
+                            android:id="@+id/event"
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity="center"
+                            android:orientation="vertical">
+
+                            <ImageView
+                                android:layout_width="70dp"
+                                android:layout_height="70dp"
+                                android:layout_margin="5dp"
+                                android:src="@drawable/event" />
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="1dp"
+                                android:layout_marginStart="10dp"
+                                android:layout_marginTop="5dp"
+                                android:layout_marginEnd="10dp"
+                                android:background="@color/colorPrimary" />
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="5dp"
+                                android:layout_marginBottom="5dp"
+                                android:gravity="center"
+                                android:text="@string/Events"
+                                android:textColor="#BF9054"
+                                android:textSize="26sp"
+                                android:textStyle="bold" />
+                        </LinearLayout>
+                    </androidx.cardview.widget.CardView>
+
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    android:gravity="center"
-                    android:orientation="horizontal">
 
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:orientation="vertical" />
-
-                </LinearLayout>
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
