--- a/app/src/main/res/layout/activity_booking_.xml
+++ b/app/src/main/res/layout/activity_booking_.xml
@@ -21,10 +21,13 @@
         app:titleTextAppearance="@style/Theme.AppCompat.Light.NoActionBar"
         app:titleTextColor="@color/white" />
 
+
     <LinearLayout
         android:id="@+id/progressbar"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
+        android:visibility="visible"
         android:gravity="center_horizontal">
 
         <com.github.ybq.android.spinkit.SpinKitView
@@ -91,7 +94,7 @@
                     <ImageView
                         android:layout_width="48dp"
                         android:layout_height="49dp"
-                        android:layout_marginStart="20dp"
+                        android:layout_marginStart="8dp"
                         android:layout_marginTop="0dp"
                         android:src="@drawable/calendar_book" />
                 </LinearLayout>
@@ -125,8 +128,8 @@
                         android:layout_height="34dp"
                         android:layout_margin="5dp"
                         android:layout_marginStart="17dp"
-                        android:layout_marginTop="0dp"
-                        android:src="@drawable/credit_card" />
+                        android:layout_marginTop="1dp"
+                        android:src="@drawable/credit" />
 
                 </LinearLayout>
 
@@ -167,7 +170,7 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:layout_width="53dp"
+                        android:layout_width="67dp"
                         android:layout_height="32dp"
                         android:layout_marginTop="0dp"
                         android:src="@drawable/download" />
@@ -181,11 +184,12 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:layout_width="53dp"
-                        android:layout_height="32dp"
-                        android:layout_marginStart="12dp"
-                        android:layout_marginTop="0dp"
-                        android:src="@drawable/credit_card" />
+                        android:layout_width="70dp"
+                        android:layout_height="34dp"
+                        android:layout_margin="5dp"
+                        android:layout_marginStart="17dp"
+                        android:layout_marginTop="1dp"
+                        android:src="@drawable/credit" />
 
                 </LinearLayout>
 
