--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -103,11 +103,12 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:layout_width="53dp"
-                        android:layout_height="32dp"
-                        android:layout_marginStart="29dp"
-                        android:layout_marginTop="0dp"
-                        android:src="@drawable/credit_card" />
+                        android:layout_width="107dp"
+                        android:layout_height="34dp"
+                        android:layout_margin="5dp"
+                        android:layout_marginStart="17dp"
+                        android:layout_marginTop="1dp"
+                        android:src="@drawable/credit" />
 
                 </LinearLayout>
 
@@ -148,9 +149,8 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:layout_width="53dp"
+                        android:layout_width="67dp"
                         android:layout_height="32dp"
-                        android:layout_marginStart="8dp"
                         android:layout_marginTop="0dp"
                         android:src="@drawable/download" />
                 </LinearLayout>
@@ -163,11 +163,12 @@
                     android:orientation="vertical">
 
                     <ImageView
-                        android:layout_width="53dp"
-                        android:layout_height="32dp"
-                        android:layout_marginStart="14dp"
-                        android:layout_marginTop="0dp"
-                        android:src="@drawable/credit_card" />
+                        android:layout_width="70dp"
+                        android:layout_height="34dp"
+                        android:layout_margin="5dp"
+                        android:layout_marginStart="17dp"
+                        android:layout_marginTop="1dp"
+                        android:src="@drawable/credit" />
 
                 </LinearLayout>
 
@@ -247,109 +248,86 @@
                             android:layout_width="357dp"
                             android:layout_height="239dp"
                             android:layout_marginLeft="30dp"
+                            android:layout_marginStart="25dp"
                             android:src="@drawable/tickets_payment" />
 
                         <LinearLayout
-                            android:layout_width="300dp"
-                            android:layout_height="124dp"
-                            android:layout_marginStart="80dp"
-                            android:layout_marginTop="97dp"
-                            android:layout_marginEnd="40dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentTop="true"
+                            android:layout_marginStart="5dp"
+                            android:layout_marginTop="105dp"
+                            android:layout_marginEnd="10dp"
                             android:orientation="vertical">
 
                             <LinearLayout
                                 android:layout_width="280dp"
                                 android:layout_height="wrap_content"
+                                android:layout_marginStart="70dp"
+                                android:layout_marginTop="3dp"
                                 android:orientation="horizontal">
 
                                 <LinearLayout
-                                    android:layout_width="50dp"
-                                    android:layout_height="match_parent"
-                                    android:layout_marginStart="1dp"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_margin="1dp"
                                     android:layout_weight="1"
                                     android:orientation="vertical">
 
                                     <TextView
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
-                                        android:layout_marginStart="1dp"
+                                        android:layout_marginStart="10dp"
                                         android:layout_marginTop="10dp"
                                         android:layout_weight="1"
                                         android:text="@string/date"
-                                        android:textColor="@color/dark_gray"
-                                        android:textSize="30sp" />
-
-                                        android:textSize="25sp"
                                         android:textAppearance="@style/AppTheme"
-                                        android:textStyle="bold" />
+
+                                        android:textColor="@color/dark_gray" />
 
                                     <TextView
                                         android:id="@+id/date"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
-                                        android:layout_marginTop="5dp"
-                                        android:layout_marginStart="5dp"
+                                        android:layout_marginStart="10dp"
                                         android:layout_weight="1"
-                                        android:text="dbdfbdfbdfb"
-                                        android:textAppearance="@style/AppTheme"
+                                        android:text="ffd"
                                         android:textColor="@color/black"
-
-                                        android:textSize="26sp" />
-                        android:textSize="23sp" />
-
-
+                                        android:textSize="20sp" />
                                 </LinearLayout>
 
-                                <LinearLayout
-                                    android:layout_marginEnd="20dp"
 
-                                    android:layout_width="90dp"
-                                    android:layout_height="101dp"
-                                    android:layout_margin="5dp"
+                                <LinearLayout
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_margin="1dp"
                                     android:layout_weight="1"
                                     android:orientation="vertical">
 
                                     <TextView
                                         android:layout_width="wrap_content"
+
                                         android:layout_height="wrap_content"
                                         android:layout_marginStart="10dp"
-                                        android:layout_marginTop="15dp"
+                                        android:layout_marginTop="10dp"
                                         android:layout_weight="1"
                                         android:text="@string/price"
-                                        android:textColor="@color/dark_gray"
-                                        android:textSize="30sp" />
-
-
-                                        android:textSize="25sp"
                                         android:textAppearance="@style/AppTheme"
-                                        android:textStyle="bold"
 
-                                    />
+                                        android:textColor="@color/dark_gray"
+
+                                        />
 
                                     <TextView
                                         android:id="@+id/price_total"
                                         android:layout_width="wrap_content"
                                         android:layout_height="wrap_content"
-
-                                        android:layout_marginStart="5dp"
-                                        android:layout_weight="1"
-                                        android:text="dfbdffddf"
-                                        android:textColor="@color/black"
-                                        android:textSize="26sp" />
-
-
-                                        android:layout_margin="3dp"
                                         android:layout_marginStart="10dp"
                                         android:layout_weight="1"
-                                        android:text="dfbdffdghdf"
+                                        android:text="ffd"
                                         android:textColor="@color/black"
-                                        android:textSize="23sp" />
-
-                                    android:textAppearance="@style/AppTheme"
-
-                                    android:textSize="25sp" />
+                                        android:textSize="20sp" />
                                 </LinearLayout>
-
 
                             </LinearLayout>
 
@@ -376,10 +354,9 @@
                         android:text="@string/checkout"
                         android:textColor="@color/white"
                         android:textSize="26sp"
-                        android:textStyle="bold" />
+                        android:textStyle="bold"
+                        android:textAppearance="@style/AppTheme"/>
 
-                    android:textAppearance="@style/AppTheme"
-                    />
 
                 </LinearLayout>
             </ScrollView>
