--- a/app/src/main/res/layout/ticket_item.xml
+++ b/app/src/main/res/layout/ticket_item.xml
@@ -71,7 +71,7 @@
                     android:layout_weight="1"
                     app:srcCompat="@drawable/add" />
 
-                <EditText
+                <TextView
                     android:id="@+id/numberOfTickets"
                     android:layout_width="40dp"
                     android:layout_height="60dp"
